--- a/index.html
+++ b/index.html
@@ -1,240 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GitHub Profile Finder</title>
-  <style>
-    body {
-      background: linear-gradient(120deg, #1a73e8 0%, #00c6fb 100%);
-      min-height: 100vh;
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-    }
-    h1 {
-      color: #fff;
-      margin-top: 2.5rem;
-      margin-bottom: 1.3rem;
-      letter-spacing: 2px;
-      text-shadow: 0 2px 8px #1a73e850;
-      font-size: 2.2rem;
-    }
-    form {
-      display: flex;
-      gap: 0.7rem;
-      margin-bottom: 2.2rem;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    input[type="text"] {
-      padding: 0.7rem 1.1rem;
-      font-size: 1.08rem;
-      border: 2px solid #bde0fe;
-      border-radius: 7px;
-      width: 260px;
-      transition: border-color 0.3s;
-      background: #fff;
-      color: #222;
-    }
-    input[type="text"]:focus {
-      border-color: #1a73e8;
-      outline: none;
-    }
-    button {
-      background-color: #1a73e8;
-      color: white;
-      border: none;
-      padding: 0 1.5rem;
-      border-radius: 7px;
-      font-size: 1.08rem;
-      cursor: pointer;
-      font-weight: 700;
-      letter-spacing: 1px;
-      transition: background 0.2s;
-      box-shadow: 0 2px 8px #1a73e820;
-    }
-    button:hover {
-      background: #0051a3;
-    }
-    .card {
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 8px 32px rgba(30, 64, 175, 0.17);
-      padding: 2.2rem 1.7rem 1.5rem 1.7rem;
-      max-width: 400px;
-      width: 100%;
-      text-align: center;
-      margin-top: 1rem;
-      animation: fadein 0.5s;
-    }
-    @keyframes fadein {
-      from { opacity: 0; transform: translateY(20px);}
-      to { opacity: 1; transform: translateY(0);}
-    }
-    .profile-img {
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 1.1rem;
-      border: 4px solid #e3f2fd;
-      box-shadow: 0 2px 12px #1a73e820;
-    }
-    .username {
-      font-size: 1.35rem;
-      font-weight: 700;
-      color: #1a73e8;
-      margin-bottom: 0.2rem;
-      letter-spacing: 1px;
-    }
-    .realname {
-      font-size: 1.08rem;
-      color: #222;
-      margin-bottom: 0.7rem;
-    }
-    .info-list {
-      display: flex;
-      justify-content: space-around;
-      gap: 0.7rem;
-      margin-top: 1.2rem;
-      margin-bottom: 0.2rem;
-    }
-    .info-item {
-      background: #e3f2fd;
-      border-radius: 10px;
-      padding: 0.7rem 1.1rem;
-      font-size: 1.06rem;
-      font-weight: 600;
-      color: #1a73e8;
-      min-width: 80px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-shadow: 0 1px 4px #1a73e810;
-    }
-    .info-label {
-      font-size: 0.92rem;
-      font-weight: 400;
-      color: #444;
-      margin-top: 0.2rem;
-    }
-    .error {
-      background: #fff;
-      color: #d32f2f;
-      border-radius: 10px;
-      padding: 1.2rem 1.5rem;
-      margin-top: 1.5rem;
-      font-size: 1.08rem;
-      box-shadow: 0 2px 12px #d32f2f22;
-      max-width: 400px;
-      text-align: center;
-      animation: fadein 0.5s;
-    }
-    .loader {
-      border: 4px solid #e3f2fd;
-      border-top: 4px solid #1a73e8;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      margin: 2.2rem auto 0.7rem auto;
-      animation: spin 0.9s linear infinite;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0);}
-      100% { transform: rotate(360deg);}
-    }
-    @media (max-width: 500px) {
-      body { padding: 0 0.1rem; }
-      .card, .error { padding: 1.1rem 0.4rem; }
-      .info-list { flex-direction: column; gap: 0.5rem; }
-    }
-  </style>
-</head>
-<body>
-  <h1>GitHub Profile Finder</h1>
-  <form id="searchForm" autocomplete="off">
-    <input type="text" id="username" placeholder="Enter GitHub username..." required />
-    <button type="submit">Search</button>
-  </form>
-  <div id="result"></div>
-  <script>
-    const form = document.getElementById('searchForm');
-    const usernameInput = document.getElementById('username');
-    const resultDiv = document.getElementById('result');
-
-    form.addEventListener('submit', async function(e) {
-      e.preventDefault();
-      const username = usernameInput.value.trim();
-      if (!username) return;
-      showLoader();
-      try {
-        // Fetch user profile
-        const userRes = await fetch(`https://api.github.com/users/${username}`);
-        if (!userRes.ok) throw new Error('User not found');
-        const user = await userRes.json();
-
-        // Fetch repos (for stars)
-        let stars = 0;
-        let page = 1, repos = [];
-        // GitHub API paginates repos at 100 per page
-        while (true) {
-          const repoRes = await fetch(`https://api.github.com/users/${username}/repos?per_page=100&page=${page}`);
-          const repoPage = await repoRes.json();
-          if (!Array.isArray(repoPage) || repoPage.length === 0) break;
-          repos = repos.concat(repoPage);
-          if (repoPage.length < 100) break;
-          page++;
-        }
-        stars = repos.reduce((sum, repo) => sum + (repo.stargazers_count || 0), 0);
-
-        showCard({
-          avatar_url: user.avatar_url,
-          login: user.login,
-          name: user.name,
-          public_repos: user.public_repos,
-          following: user.following,
-          stars
-        });
-      } catch (err) {
-        showError(err.message || 'Could not fetch user');
-      }
-    });
-
-    function showLoader() {
-      resultDiv.innerHTML = `<div class="loader"></div>`;
-    }
-
-    function showError(msg) {
-      resultDiv.innerHTML = `<div class="error">${msg}</div>`;
-    }
-
-    function showCard({avatar_url, login, name, public_repos, following, stars}) {
-      resultDiv.innerHTML = `
-        <div class="card">
-          <img class="profile-img" src="${avatar_url}" alt="${login}'s avatar" />
-          <div class="username">@${login}</div>
-          ${name ? `<div class="realname">${name}</div>` : ''}
-          <div class="info-list">
-            <div class="info-item">
-              ${public_repos}
-              <span class="info-label">Repos</span>
-            </div>
-            <div class="info-item">
-              ${stars}
-              <span class="info-label">Stars</span>
-            </div>
-            <div class="info-item">
-              ${following}
-              <span class="info-label">Following</span>
-            </div>
-          </div>
-        </div>
-      `;
-    }
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>GitHub Profile Finder</title>
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <h1>GitHub Profile Finder</h1>
+    <form id="searchForm" autocomplete="off">
+      <input
+        type="text"
+        id="username"
+        placeholder="Enter GitHub username..."
+        required
+      />
+      <button type="submit">Search</button>
+    </form>
+    <div id="result"></div>
+    <script src="./script.js"></script>
+  </body>
 </html>
